Use `Add-Exports` and `Add-Opens` manifest entries for google-java-format
to avoid passing the flags on the command line when using `java -jar`.

PiperOrigin-RevId: 432947555