@@ -198,13 +198,13 @@
             <!-- compile-time arguments for google-java-format -->
             <arg>-XDcompilePolicy=simple</arg>
             <arg>-Xplugin:ErrorProne</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
             <arg>--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
-            <arg>--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
           </compilerArgs>
           <annotationProcessorPaths>
             <path>
@@ -233,6 +233,19 @@
             <manifest>
               <mainClass>com.google.googlejavaformat.java.Main</mainClass>
             </manifest>
+            <manifestEntries>
+              <Add-Exports><!--
+                -->jdk.compiler/com.sun.tools.javac.api <!--
+                -->jdk.compiler/com.sun.tools.javac.file <!--
+                -->jdk.compiler/com.sun.tools.javac.main <!--
+                -->jdk.compiler/com.sun.tools.javac.model <!--
+                -->jdk.compiler/com.sun.tools.javac.parser <!--
+                -->jdk.compiler/com.sun.tools.javac.processing <!--
+                -->jdk.compiler/com.sun.tools.javac.tree <!--
+                -->jdk.compiler/com.sun.tools.javac.util<!--
+              --></Add-Exports>
+              <Add-Opens>jdk.compiler/com.sun.tools.javac.code jdk.compiler/com.sun.tools.javac.comp</Add-Opens>
+            </manifestEntries>
           </archive>
         </configuration>
       </plugin>
